# Monika

./: .gitignore  Cargo.toml  README.md
.kilo/plans/: 1784088004265-monika-p2p-chat-plan.md
crates/core/: Cargo.toml
crates/core/src/: error.rs  identity.rs  lib.rs
crates/core/src/crypto/: friend_code.rs  invite.rs  keys.rs  keystore.rs  mod.rs
crates/core/tests/: integration.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
