# Tauri desktop app (separate Cargo package, not in the workspace).
[package]
name = "monika-desktop"
version = "0.1.0"
edition = "2021"
default-run = "monika-desktop"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
monika-core = { path = "../crates/core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
