[package]
name = "monika-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Monika: a decentralized, serverless, end-to-end encrypted team chat."

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1", features = ["derive"] }
bip39 = { version = "2", features = ["rand"] }
data-encoding = "2"
sha2 = "0.10"
hkdf = "0.12"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
base64 = "0.22"
thiserror = "1"

[dev-dependencies]
hex = "0.4"
